Fix project titles on smaller screens

--- a/_src/scss/_projects.scss
+++ b/_src/scss/_projects.scss
@@ -120,6 +120,7 @@
     font-size: 4em;
     line-height: 1.125;
     border-bottom: 5px solid;
+    word-break: break-word;
   }
 }
 
